src/pages/portfolio/Portfolio.module.scss
@import "./../../style";

.portfolio {
   height: 100vh;
   padding-top: 80px;
   padding-bottom: 80px;

   overflow-y: auto;
   @extend .scrollbar;

   @include media(max, lg) {
      padding-top: 100px;
      padding-bottom: 50px;
   }
}

.container {
   position: relative;
   @extend .container;
   transform: unset;
   animation: unset;
}

.list {
   position: relative;
   z-index: 9999;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 250px;
   gap: 30px;
   padding: 0 20px;
   list-style: none;

   @include media(max, xl) {
      grid-template-columns: repeat(2, 1fr);
      padding: unset;
   }

   @include media(max, lg) {
      grid-template-columns: 1fr;
   }
}

.item {
}

